--- a/src/app/shared/components/filter/filter.component.html
+++ b/src/app/shared/components/filter/filter.component.html
@@ -7,7 +7,7 @@
       type="text"
       class="form-control"
       name="searchString"
-      placeholder="Type to search..."
+      placeholder="Type to search by author"
       formControlName="filterValue"
     />
   </div>
